# sysmon-log-analyzer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: analyzer.rs  cli.rs  display.rs  filters.rs  helpers.rs  lib.rs  live_monitor.rs  main.rs  parser.rs  sysmon.rs  telemetry.rs
src/cli/: parse.rs
src/commands/: mod.rs  parse.rs  watch.rs
