[package]
name = "security_log_analyser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
clap = { version = "4.5.50", features = ["derive"] }
chrono = "0.4.42"
colored = "3.0.0"
evtx = "0.8.5"
sealed = "0.6.0"
ctrlc = "3.5.1"
prettytable-rs = "0.10.0"

failure = "0.1.3"
serde-xml-rs = "0.3.1"
serde = "1.0.101"
serde_derive = "1.0.101"
derive_is_enum_variant = "0.1.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[target.'cfg(windows)'.dependencies]
windows = {version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_EventLog",
    "Win32_Security",
    "Win32_System_Threading",
]}
